[package]
name = "airinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bluer = { version = "0.16.1", features = ["full"] }
btleplug = "0.10"
#btleplug = "0.11"
futures = "0.3"
log = "0.4"
#tokio = { version = "1" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
