[package]
name = "airinfo"
authors = ["Lex Childs <lexchilds@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
categories = ["hardware-support"]
keywords = ["bluetooth", "Apple", "Airpod", "Beats"]
readme = "README.md"
repository = "https://github.com/lex148/airinfo"
description = "Small library to read battery and status info from Airpods and Beats"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10"
log = "0.4"
tokio = { version = "1" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
